--- a/style.css
+++ b/style.css
@@ -144,6 +144,9 @@
   }
 
   @media screen and (max-width: 44em) {
+     .inputBox {
+       flex-direction: column;
+     }
     #generalContainer {
       padding-right: 2rem;
       padding-left: 2rem;
