--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ display: none;
       padding-right: 2rem;
       padding-left: 2rem;
     }
-
+  #inputSpace{width: 100%;}
     .content {
       width: 100%;
       padding-right: 2rem;
@@ -148,7 +148,7 @@ display: none;
   @media screen and (max-width: 44em) {
      .inputBox {
        flex-direction: column;
-       gap: 20px;
+       gap: 15px;
      }
     #generalContainer {
       padding-right: 2rem;
